src/tintin.h

#define gnutls_session_t int
struct listnode
{
	struct listroot       * root; // variable
	char                  * arg1;
	char                  * arg2;
	char                  * arg3;
	char                  * arg4;
	char                  * group;
	unsigned int            shots;
	int                     flags;
	union
	{
		pcre2_code        * regex;      // act, alias, gag, highlight, substitute
		char              * data;       // class
		struct room_data  * room;       // terrain
		long long           val64;      // delay, tick, path
		short               val16[4];   // button
		int                 val32[2];   // landmark, event, pathdir
	};
};
struct session
{
	struct session        * next;
	struct session        * prev;
	struct map_data       * map;
	struct port_data      * port;
	z_stream              * mccp2;
	z_stream              * mccp3;
	gnutls_session_t        ssl;
	struct termios          cur_terminal;
	struct log_data       * log;
	struct scroll_data    * scroll;
	struct split_data     * split;
	struct input_data     * input;
	char                  * name;
	char                  * group;
	char                  * line_capturefile;
	int                     line_captureindex;
	int                     gagline;
	struct listroot       * list[LIST_MAX];
	time_t                  created;
	int                     cur_row;
	int                     sav_row;
	int                     cur_col;
	int                     sav_col;
	int                     wrap;
	int                     fgc;
	int                     bgc;
	int                     vtc;
	int                     socket;
	int                     telopts;
	int                     telopt_flag[8];
	int                     event_flags;
        int                     config_flags;
	int                     flags;
	int                     charset;
	char                  * session_host;
	char                  * session_ip;
	char                  * session_port;
	char                  * cmd_color;
	unsigned char         * read_buf;
	int                     read_len;
	int                     read_max;
	unsigned long long      connect_retry;
	int                     connect_error;
//	char                    more_output[BUFFER_SIZE];
	char                  * more_output;
	int                     color;
	char                    color_patch[100];
	unsigned long long      packet_patch;
	unsigned long long      check_output;
	int                     scrollback_tab;
	int                     tab_width;
	unsigned long long      rand;
	unsigned short          rkey;
	struct port_data      * proxy;
};
struct port_data
{
	struct port_data      * next;
	struct port_data      * prev;
	struct port_data      * update;
	char                  * name;
	char                  * ip;
	char                  * prefix;
	char                  * color;
	char                  * group;
	int                     port;
	int                     fd;
	int                     flags;
	int                     comm_flags;
	int                     mtts_flags;
	struct msdp_data     ** msdp_data;
	char                  * proxy;
	char                  * ttype;
	char                    telbuf[BUFFER_SIZE];
	int                     teltop;
	char                    inbuf[BUFFER_SIZE];
	int                     intop;
	int                     cols;
	int                     rows;
	int                     total;
	int                     rank;
	z_stream              * mccp2;
	z_stream              * mccp3;
	struct session        * ses;
};
struct row_data
{
	char                  * str;
};
/*
	Typedefs
*/

typedef int             CMPFUNC (const void *a, const void *b);
/*
	Structures for tables.c
*/

struct buffer_type
{
	char                  * name;
	BUFFER                * fun;
	char                  * desc;
};
struct charset_type
{
	char                  * name;
	char                  * html;
	char                  * mnes;
	int                     flags;
};
struct chat_type
{
	char                  * name;
	CHAT                  * fun;
	int                     lval;
	int                     rval;
	char                  * desc;
};
extern  int port_new(struct session *ses, int s);
extern void close_port(struct session *ses, struct port_data *buddy, int unlink);
extern void process_port_connections(struct session *ses, fd_set *read_set, fd_set *write_set, fd_set *exc_set);
extern void port_forward_session(struct session *ses, char *linelog);
extern void port_socket_printf(struct session *ses, struct port_data *buddy, char *format, ...);
extern void port_telnet_printf(struct session *ses, struct port_data *buddy, size_t length, char *format, ...);
extern void port_log_printf(struct session *ses, struct port_data *buddy, char *format, ...);
extern void port_printf(struct session *ses, char *format, ...);
extern  int process_port_input(struct session *ses, struct port_data *buddy);
extern void get_port_commands(struct session *ses, struct port_data *buddy, char *buf, int len);
extern void port_name_change(struct session *ses, struct port_data *buddy, char *txt);
extern void port_receive_message(struct session *ses, struct port_data *buddy, char *txt);
extern void port_puts(struct session *ses, char *arg);
extern struct port_data *find_port_buddy(struct session *ses, char *arg);
extern struct port_data *find_port_group(struct session *ses, char *arg);
extern void init_inputregion(struct session *ses, int top_row, int top_col, int bot_row, int bot_col);
extern  int get_row_index(struct session *ses, int val);
extern  int get_col_index(struct session *ses, int val);
extern  int get_row_index_arg(struct session *ses, char *arg);
extern  int get_col_index_arg(struct session *ses, char *arg);
extern void csip_handler(int var1, int var2, int var3);
extern void csit_handler(int var1, int var2, int var3);
extern void rqlp_handler(int event, int button, int row, int col);
extern void osc_handler(char ind, char *arg);
extern void erase_scroll_region(struct session *ses);
extern void erase_input_region(struct session *ses);
extern void erase_split_region(struct session *ses);
extern void erase_bot_region(struct session *ses);
extern void erase_top_region(struct session *ses);
extern void erase_left_region(struct session *ses);
extern void erase_right_region(struct session *ses);
extern void erase_square(struct session *ses, int top_row, int top_col, int bot_row, int bot_col);
extern void fill_scroll_region(struct session *ses, char *arg);
extern void fill_top_region(struct session *ses, char *arg);
extern void fill_bot_region(struct session *ses, char *arg);
extern void fill_left_region(struct session *ses, char *arg);
extern void fill_right_region(struct session *ses, char *arg);
extern void fill_split_region(struct session *ses, char *arg);
extern int inside_scroll_region(struct session *ses, int row, int col);
extern void add_row_index(struct row_data **row, int index);
extern void del_row_index(struct row_data **row, int index);
extern void print_scroll_region(struct session *ses);
extern void print_screen();
extern void init_screen(int rows, int cols, int pix_rows, int pix_cols);
extern void destroy_screen();
extern int inside_scroll_region(struct session *ses, int row, int col);
extern void set_grid_screen(struct session *ses, char *str, int row, int col);
extern void add_line_screen(struct session *ses, char *str, int row);
extern void set_line_screen(struct session *ses, char *ins, int row, int col);
extern void get_line_screen(char *str, int row);
extern  int get_link_screen(struct session *ses, char *var, char *val, int flags, int row, int col);
extern void get_word_screen(char *str, int row, int col);
extern struct session *session_command(char *arg, struct session *ses);
extern struct session *find_session(char *name);
extern struct session *newactive_session(void);
extern struct session *activate_session(struct session *ses);
extern struct session *new_session(struct session *ses, char *name, char *address, int desc, int ssl);
extern struct session *connect_session(struct session *ses);
extern void cleanup_session(struct session *ses);
extern void dispose_session(struct session *ses);
extern void show_message(struct session *ses, int index, char *format, ...);
extern void show_error(struct session *ses, int index, char *format, ...);
extern void show_debug(struct session *ses, int index, struct listnode *node, char *format, ...);
extern void show_info(struct session *ses, int index, char *format, ...);
extern void tintin_header(struct session *ses, int width, char *format, ...);
extern void socket_printf(struct session *ses, size_t length, char *format, ...);
extern void telnet_printf(struct session *ses, int length, char *format, ...);
extern void print_lines(struct session *ses, int flags, char *color, char *format, ...);
extern void show_lines(struct session *ses, char *color, char *str);
extern void tintin_printf(struct session *ses, char *format, ...);
extern void tintin_printf2(struct session *ses, char *format, ...);
extern void tintin_printf3(struct session *ses, char *format, ...);
extern void tintin_puts(struct session *ses, char *string);
extern void tintin_puts2(struct session *ses, char *string);
extern void tintin_puts3(struct session *ses, char *string, int prompt);
extern void quadsort(void *array, size_t nmemb, size_t size, CMPFUNC *cmp);
extern int cmp_int(const void * a, const void * b);
extern int cmp_str(const void * a, const void * b);
extern int cmp_num(const void * a, const void * b);
extern void init_split(struct session *ses, int top, int bot, int left, int right);
extern void reset_screen(struct session *ses);
extern void dirty_screen(struct session *ses);
extern void split_show(struct session *ses, char *prompt, char *row, char *col);
extern gnutls_session_t ssl_negotiate(struct session *ses);
extern int get_raw_len_str_range_str_width(struct session *ses, char *str, int start, int end, int *raw_width);
extern int get_raw_off_str_range_raw_width(struct session *ses, char *str, int start, int end, int *raw_width);
extern int raw_len_str(struct session *ses, char *str, int start, int end);
extern int str_len_raw(struct session *ses, char *str, int start, int end);
extern char *str_ins_str(struct session *ses, char **str, char *ins, int str_start, int str_end);
extern char *calign(struct session *ses, char *in, char *out, int width);
extern char *lalign(struct session *ses, char *in, char *out, int width);
extern char *ralign(struct session *ses, char *in, char *out, int width);
extern char *ualign(struct session *ses, char *in, char *out, int width);
extern char char_cmp(char left, char right);
extern char is_alnum(char input);
extern char is_alpha(char input);
extern char is_digit(char input);
extern char is_hex(char input);
extern char is_print(char input);
extern char is_space(char input);
extern char is_varchar(char input);
extern char is_csichar(char input);
extern  int valid_escape(struct session *ses, char *arg);
extern char *fuzzy_color_code(struct session *ses, char *pti);
extern char *dim_color_code(struct session *ses, char *pti, int mod);
extern char *lit_color_code(struct session *ses, char *pti, int mod);
extern int color_gradient(char *pti, int low, int max);
extern int is_tintin_code(char *pti);
extern int is_color_code(char *str);
extern int is_color_name(char *str);
extern int substitute_color(char *input, char *output, int colors);
extern struct buffer_type buffer_table[];
extern struct charset_type charset_table[];
extern struct chat_type chat_table[];
extern   char character_table[];
extern void erase_scroll_region(struct session *ses);