src/math.zig

pub extern fn port_color(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_flag(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_group(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_ignore(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_initialize(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_info(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_message(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_name(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_prefix(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_proxy(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_rank(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_send(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_uninitialize(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_who(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_zap(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
pub extern fn port_new(ses: [*c]struct_session, s: c_int) c_int;
pub extern fn close_port(ses: [*c]struct_session, buddy: [*c]struct_port_data, unlink: c_int) void;
pub extern fn process_port_connections(ses: [*c]struct_session, read_set: [*c]fd_set, write_set: [*c]fd_set, exc_set: [*c]fd_set) void;
pub extern fn port_forward_session(ses: [*c]struct_session, linelog: [*c]u8) void;
pub extern fn port_socket_printf(ses: [*c]struct_session, buddy: [*c]struct_port_data, format: [*c]u8, ...) void;
pub extern fn port_telnet_printf(ses: [*c]struct_session, buddy: [*c]struct_port_data, length: usize, format: [*c]u8, ...) void;
pub extern fn port_log_printf(ses: [*c]struct_session, buddy: [*c]struct_port_data, format: [*c]u8, ...) void;
pub extern fn port_printf(ses: [*c]struct_session, format: [*c]u8, ...) void;
pub extern fn process_port_input(ses: [*c]struct_session, buddy: [*c]struct_port_data) c_int;
pub extern fn get_port_commands(ses: [*c]struct_session, buddy: [*c]struct_port_data, buf: [*c]u8, len: c_int) void;
pub extern fn port_name_change(ses: [*c]struct_session, buddy: [*c]struct_port_data, txt: [*c]u8) void;
pub extern fn port_receive_message(ses: [*c]struct_session, buddy: [*c]struct_port_data, txt: [*c]u8) void;
pub extern fn port_puts(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn find_port_buddy(ses: [*c]struct_session, arg: [*c]u8) [*c]struct_port_data;
pub extern fn find_port_group(ses: [*c]struct_session, arg: [*c]u8) [*c]struct_port_data;
pub extern fn do_screen(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn init_inputregion(ses: [*c]struct_session, top_row: c_int, top_col: c_int, bot_row: c_int, bot_col: c_int) void;
pub extern fn get_row_index(ses: [*c]struct_session, val: c_int) c_int;
pub extern fn get_col_index(ses: [*c]struct_session, val: c_int) c_int;
pub extern fn get_row_index_arg(ses: [*c]struct_session, arg: [*c]u8) c_int;
pub extern fn get_col_index_arg(ses: [*c]struct_session, arg: [*c]u8) c_int;
pub extern fn csip_handler(var1: c_int, var2: c_int, var3: c_int) void;
pub extern fn csit_handler(var1: c_int, var2: c_int, var3: c_int) void;
pub extern fn rqlp_handler(event: c_int, button: c_int, row: c_int, col: c_int) void;
pub extern fn osc_handler(ind: u8, arg: [*c]u8) void;
pub extern fn erase_scroll_region(ses: [*c]struct_session) void;
pub extern fn erase_input_region(ses: [*c]struct_session) void;
pub extern fn erase_split_region(ses: [*c]struct_session) void;
pub extern fn erase_bot_region(ses: [*c]struct_session) void;
pub extern fn erase_top_region(ses: [*c]struct_session) void;
pub extern fn erase_left_region(ses: [*c]struct_session) void;
pub extern fn erase_right_region(ses: [*c]struct_session) void;
pub extern fn erase_square(ses: [*c]struct_session, top_row: c_int, top_col: c_int, bot_row: c_int, bot_col: c_int) void;
pub extern fn fill_scroll_region(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn fill_top_region(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn fill_bot_region(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn fill_left_region(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn fill_right_region(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn fill_split_region(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn inside_scroll_region(ses: [*c]struct_session, row: c_int, col: c_int) c_int;
pub extern fn add_row_index(row: [*c][*c]struct_row_data, index: c_int) void;
pub extern fn del_row_index(row: [*c][*c]struct_row_data, index: c_int) void;
pub extern fn print_scroll_region(ses: [*c]struct_session) void;
pub extern fn print_screen(...) void;
pub extern fn init_screen(rows: c_int, cols: c_int, pix_rows: c_int, pix_cols: c_int) void;
pub extern fn destroy_screen(...) void;
pub extern fn set_grid_screen(ses: [*c]struct_session, str: [*c]u8, row: c_int, col: c_int) void;
pub extern fn add_line_screen(ses: [*c]struct_session, str: [*c]u8, row: c_int) void;
pub extern fn set_line_screen(ses: [*c]struct_session, ins: [*c]u8, row: c_int, col: c_int) void;
pub extern fn get_line_screen(str: [*c]u8, row: c_int) void;
pub extern fn get_link_screen(ses: [*c]struct_session, @"var": [*c]u8, val: [*c]u8, flags: c_int, row: c_int, col: c_int) c_int;
pub extern fn get_word_screen(str: [*c]u8, row: c_int, col: c_int) void;
pub extern fn do_session(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn do_snoop(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn do_zap(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn session_command(arg: [*c]u8, ses: [*c]struct_session) [*c]struct_session;
pub extern fn find_session(name: [*c]u8) [*c]struct_session;
pub extern fn newactive_session() [*c]struct_session;
pub extern fn activate_session(ses: [*c]struct_session) [*c]struct_session;
pub extern fn new_session(ses: [*c]struct_session, name: [*c]u8, address: [*c]u8, desc: c_int, ssl: c_int) [*c]struct_session;
pub extern fn connect_session(ses: [*c]struct_session) [*c]struct_session;
pub extern fn cleanup_session(ses: [*c]struct_session) void;
pub extern fn dispose_session(ses: [*c]struct_session) void;
pub extern fn show_message(ses: [*c]struct_session, index: c_int, format: [*c]u8, ...) void;
pub extern fn show_error(ses: [*c]struct_session, index: c_int, format: [*c]u8, ...) void;
pub extern fn show_debug(ses: [*c]struct_session, index: c_int, node: [*c]struct_listnode, format: [*c]u8, ...) void;
pub extern fn show_info(ses: [*c]struct_session, index: c_int, format: [*c]u8, ...) void;
pub extern fn tintin_header(ses: [*c]struct_session, width: c_int, format: [*c]u8, ...) void;
pub extern fn socket_printf(ses: [*c]struct_session, length: usize, format: [*c]u8, ...) void;
pub extern fn telnet_printf(ses: [*c]struct_session, length: c_int, format: [*c]u8, ...) void;
pub extern fn print_lines(ses: [*c]struct_session, flags: c_int, color: [*c]u8, format: [*c]u8, ...) void;
pub extern fn show_lines(ses: [*c]struct_session, color: [*c]u8, str: [*c]u8) void;
pub extern fn tintin_printf(ses: [*c]struct_session, format: [*c]u8, ...) void;
pub extern fn tintin_printf2(ses: [*c]struct_session, format: [*c]u8, ...) void;
pub extern fn tintin_printf3(ses: [*c]struct_session, format: [*c]u8, ...) void;
pub extern fn tintin_puts(ses: [*c]struct_session, string: [*c]u8) void;
pub extern fn tintin_puts2(ses: [*c]struct_session, string: [*c]u8) void;
pub extern fn tintin_puts3(ses: [*c]struct_session, string: [*c]u8, prompt: c_int) void;
pub extern fn quadsort(array: ?*anyopaque, nmemb: usize, size: usize, cmp: ?*const CMPFUNC) void;
pub extern fn cmp_int(a: ?*const anyopaque, b: ?*const anyopaque) c_int;
pub extern fn cmp_str(a: ?*const anyopaque, b: ?*const anyopaque) c_int;
pub extern fn cmp_num(a: ?*const anyopaque, b: ?*const anyopaque) c_int;
pub extern fn do_split(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn do_unsplit(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn init_split(ses: [*c]struct_session, top: c_int, bot: c_int, left: c_int, right: c_int) void;
pub extern fn reset_screen(ses: [*c]struct_session) void;
pub extern fn dirty_screen(ses: [*c]struct_session) void;
pub extern fn split_show(ses: [*c]struct_session, prompt: [*c]u8, row: [*c]u8, col: [*c]u8) void;
pub extern fn ssl_negotiate(ses: [*c]struct_session) gnutls_session_t;
pub extern fn get_raw_len_str_range_str_width(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int, raw_width: [*c]c_int) c_int;
pub extern fn get_raw_off_str_range_raw_width(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int, raw_width: [*c]c_int) c_int;
pub extern fn raw_len_str(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int;
pub extern fn str_len_raw(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int;
pub extern fn str_ins_str(ses: [*c]struct_session, str: [*c][*c]u8, ins: [*c]u8, str_start: c_int, str_end: c_int) [*c]u8;
pub extern fn calign(ses: [*c]struct_session, in: [*c]u8, out: [*c]u8, width: c_int) [*c]u8;
pub extern fn lalign(ses: [*c]struct_session, in: [*c]u8, out: [*c]u8, width: c_int) [*c]u8;
pub extern fn ralign(ses: [*c]struct_session, in: [*c]u8, out: [*c]u8, width: c_int) [*c]u8;
pub extern fn ualign(ses: [*c]struct_session, in: [*c]u8, out: [*c]u8, width: c_int) [*c]u8;
pub extern fn char_cmp(left: u8, right: u8) u8;
pub extern fn is_alnum(input: u8) u8;
pub extern fn is_alpha(input: u8) u8;
pub extern fn is_digit(input: u8) u8;
pub extern fn is_hex(input: u8) u8;
pub extern fn is_print(input: u8) u8;
pub extern fn is_space(input: u8) u8;
pub extern fn is_varchar(input: u8) u8;
pub extern fn is_csichar(input: u8) u8;
pub extern fn valid_escape(ses: [*c]struct_session, arg: [*c]u8) c_int;
pub extern fn fuzzy_color_code(ses: [*c]struct_session, pti: [*c]u8) [*c]u8;
pub extern fn dim_color_code(ses: [*c]struct_session, pti: [*c]u8, mod: c_int) [*c]u8;
pub extern fn lit_color_code(ses: [*c]struct_session, pti: [*c]u8, mod: c_int) [*c]u8;
pub extern fn color_gradient(pti: [*c]u8, low: c_int, max: c_int) c_int;
pub extern fn is_tintin_code(pti: [*c]u8) c_int;
pub extern fn is_color_code(str: [*c]u8) c_int;
pub extern fn is_color_name(str: [*c]u8) c_int;
pub extern fn substitute_color(input: [*c]u8, output: [*c]u8, colors: c_int) c_int;
pub extern fn do_suspend(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub const buffer_table: [*c]struct_buffer_type = @extern([*c]struct_buffer_type, .{
    .name = "buffer_table",
});
pub const charset_table: [*c]struct_charset_type = @extern([*c]struct_charset_type, .{
    .name = "charset_table",
});
pub const chat_table: [*c]struct_chat_type = @extern([*c]struct_chat_type, .{
    .name = "chat_table",
});
pub const character_table: [*c]u8 = @extern([*c]u8, .{
    .name = "character_table",
});
